# SyntheticOcrImageGenerator

./: README.md  generate.py  pyproject.toml
ocrgen/: bg_utils.py  main.py
src/: cli.py  generator.py  main.py
src/generators/: image_generator.py  text_generator.py
src/ocrgen/: bg_utils.py  image_utils.py  main.py  text_utils.py
src/ocrgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/utils/: text_utils.py
