[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrgen"
version = "0.1.0"
description = "Synthetic text image generator for OCR training"
dependencies = [
    "Pillow",
    "numpy",
    "tqdm"
]
requires-python = "3.13.2"

[project.scripts]
synthghost = "synthghost.main:main"